--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
 <body>
     <header>
-
+        <h2 class="font-medium text-5xl text-center text-gray-700">Hunting phone</h2>
     </header>
     <main>
+        <section>
+            <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
 
+            </div>
+        </section>
     </main>
     <footer>
 
