--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
     <header>
         <h2 class="font-medium text-5xl text-center text-gray-700">Hunting phone</h2>
     </header>
-    <main>
+    <main class=" container mx-auto mt-6">
+        <!-- search section -->
+        <section class="bg-gray-100 p-4 m-4">
+            <input id="Search-field" type="text" placeholder="Search..."
+                class="input input-bordered w-full max-w-xs bg-black text-white font-medium" />
+            <button class="btn btn-accent" onclick="handleSearch ()">Search</button>
+        </section>
+
+        <!-- card section -->
         <section>
-            <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+            <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
 
             </div>
         </section>
